# eqpt-monitor

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: equipment.yaml
docs/adr/: 001-two-service-split.md  002-timescaledb-over-influxdb.md  003-opc-ua-only.md  004-narrow-eav-telemetry-schema.md
docs/superpowers/plans/: 2026-04-05-factory-pulse-1a-core-pipeline.md  2026-04-10-factory-pulse-1b-observability-testing-ci.md
docs/superpowers/specs/: 2026-04-05-factory-pulse-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts  websocket.ts
frontend/src/components/: ConnectionStatus.tsx  EquipmentCard.tsx  EquipmentGrid.tsx
frontend/tests/: EquipmentCard.test.tsx
grafana/dashboards/: equipment-telemetry.json  factory-health.json  system-health.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: timescaledb.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py
services/api/src/api/: __init__.py  config.py  db.py  logging_config.py  main.py  metrics.py  middleware.py  query_router.py  redis_client.py  seed.py  websocket.py
services/api/src/api/routes/: batches.py  equipment.py  health.py  telemetry.py
services/api/tests/: test_integration.py  test_query_router.py  test_routes_equipment.py  test_seed.py  test_websocket.py
services/ingest/: Dockerfile  pyproject.toml
services/ingest/src/ingest/: __init__.py  batch_buffer.py  config.py  db_writer.py  logging_config.py  main.py  metrics.py  opcua_client.py  redis_publisher.py
services/ingest/tests/: test_batch_buffer.py  test_metrics.py  test_redis_publisher.py
services/simulator/: Dockerfile  pyproject.toml
services/simulator/src/simulator/: __init__.py  batch_tracker.py  config.py  equipment.py  logging_config.py  main.py  opcua_server.py  state_machine.py
services/simulator/tests/: test_batch_tracker.py  test_equipment.py  test_state_machine.py
